--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-spinners": "^0.10.6",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "use-sound": "^3.0.1"
   }
 }
