--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-  "name": "test-site",
-  "version": "1.0.0",
-  "private": true,
-  "description": "test-site",
-  "author": "Richwin_",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^3.3.1",
-    "gatsby-plugin-google-analytics": "^3.4.0",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.4.0",
-    "gatsby-plugin-sitemap": "^4.0.0",
-    "gatsby-plugin-styled-components": "^4.4.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-sharp": "^3.4.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-spinners": "^0.10.6",
-    "styled-components": "^5.2.3",
-    "use-sound": "^3.0.1"
-  }
+	"name": "test-site",
+	"version": "1.0.0",
+	"private": true,
+	"description": "test-site",
+	"author": "_Richwin",
+	"keywords": [
+		"gatsby"
+	],
+	"scripts": {
+		"develop": "gatsby develop",
+		"start": "gatsby develop",
+		"build": "gatsby build",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean"
+	},
+	"dependencies": {
+		"babel-plugin-styled-components": "^1.12.0",
+		"gatsby": "^3.14.0",
+		"gatsby-plugin-google-analytics": "^3.4.0",
+		"gatsby-plugin-image": "^1.4.0",
+		"gatsby-plugin-manifest": "^3.4.0",
+		"gatsby-plugin-offline": "^4.4.0",
+		"gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+		"gatsby-plugin-react-helmet": "^4.4.0",
+		"gatsby-plugin-sharp": "^3.4.0",
+		"gatsby-plugin-sitemap": "^4.0.0",
+		"gatsby-plugin-styled-components": "^4.4.0",
+		"gatsby-source-filesystem": "^3.4.0",
+		"gatsby-transformer-sharp": "^3.4.0",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-helmet": "^6.1.0",
+		"styled-components": "^5.2.3",
+		"typewriter-effect": "^2.18.2"
+	}
 }
