--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"gatsby-plugin-offline": "^4.4.0",
 		"gatsby-plugin-prefetch-google-fonts": "^1.4.3",
 		"gatsby-plugin-react-helmet": "^4.4.0",
+		"gatsby-plugin-robots-txt": "^1.6.10",
 		"gatsby-plugin-sharp": "^3.4.0",
 		"gatsby-plugin-sitemap": "^4.0.0",
 		"gatsby-plugin-styled-components": "^4.4.0",
